refactor page header and message

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -26,6 +26,7 @@ $font-family-sans-serif:  'Open Sans', sans-serif;
 $headings-font-family:    'Raleway', sans-serif;
 
 // Media Queries
+$screen-lg-max:           1399px;
 $screen-md-max:           1199px;
 $screen-sm-max:           1023px;
 $screen-xs-max:           767px;
