--- a/scss/layout/_page_header.scss
+++ b/scss/layout/_page_header.scss
@@ -1,338 +1,23 @@
-#page-header, #mobile-header {
+#page-header {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 100;
-  box-shadow: 1px 2px 3px rgba(0,0,0,.1);
   background-color: #fff;
-  &.consolidate-header {
-    #topnav {
-      height: 0;
-      overflow: hidden;
-    }
-  }
-  .navbar {
-    margin-bottom: 0;
-  }
-  .nav {
-    li {
-      a {
-        font-family: $headings-font-family;
-        cursor: pointer;
-      }
-    }
-  }
-  .button-lime {
-    color: #fff;
-    line-height: 1;
-    padding: 5px 20px;
-    text-transform: none;
-    font-family: $headings-font-family;
-    font-weight: 400;
-    text-align: center;
-    margin-top: 0;
-    span {
-      text-transform: uppercase;
-      font-weight: 700;
-    }
-  }
-}
-
-// Topbar
-#topnav {
-  background: $gray-darker;
-  text-transform: uppercase;
-  @include transition(.5s);
-  height: auto;
-  .dropdown {
-    .button {
-      background-color: $cream;
-      text-transform: uppercase;
-      color: $text-color;
-      font-weight: 400;
-      padding-top: 6px;
-      padding-bottom: 6px;
-    }
-  }
-  .dropdown-menu {
-    border-radius: 0;
-    width: 100%;
-  }
-  .button {
-    padding-top: 3px;
-    padding-bottom: 3px;
-    color: #fff;
-    font-size: 11px;
-    margin-top: 0;
-  }
-}
-
-// Application Navigation
-#appnav {
-  float: right;
-  margin-bottom: 0;
-  margin-top:0;
-  list-style: none;
-  .button {
-    padding: 6px 20px;
-    background-color: $amaranth;
-    color: #fff;
-  }
-  .dropdown {
-    .button {
-      background-color: $amaranth;
-      color: #fff;
-      padding: 6px 35px 6px 20px;
-      .user-notifications {
-        display: inline-block;
-        height: 27px;
-        width: 25px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: #cd0027;
-        text-transform: none;
-        .notification-circle {
-          border-radius: 50%;
-          width: 14px;
-          height: 14px;
-          position: absolute;
-          top: 6px;
-          left: 5px;
-          background-color: #fff;
-          color: #cd0027;
-        }
-      }
-    }
-  }
-}
-
-#accessibilitynav {
-  list-style: none;
-  float: left;
-  margin: 0;
-  padding: 0;
-  >li {
-    float: left;
-    position: relative;
-    display: block;
-  }
-}
-
-
-
-
-
-// Primary Navigation: Desktop
-#mainnav {
-  .container {
-    position: relative;
-  }
-  .navbar-brand {
-    display: block;
-    padding: 18px 5px 5px 30px;
-    img {
-      width: 140px;
-    }
-  }
-
-  .navbar-nav {
-    margin-left: 180px;
-    li {
-      a {
-        height: 67px;
-        line-height: 67px;
-        padding: 0 20px;
-        font-size: 18px;
-        color: $gray-darker;
-        font-weight: 400;
-        &:hover, &:active, &:focus {
-          background: transparent;
-          color: $teal;
-        }
-      }
-    }
-  }
-  #mainnav-cta{
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    color: #fff;
-    line-height: 1;
-    padding: 5px 20px;
-    text-transform: none;
-    font-family: $headings-font-family;
-    font-weight: 400;
-    font-size: 17px;
-    @include transition(.25s);
-    span {
-      display: block;
-      text-transform: uppercase;
-      font-weight: 700;
-    }
-  }
-}
-
-// Primary Navigation: Mobile
-#mobilenav {
-  margin-bottom: 0;
-  border: none;
-  .navbar-collapse {
-    padding: 0;
-    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 3px inset;
-  }
-  .nav {
-    li {
-      border-bottom: 1px solid $gray-lighter;
-      a {
-        padding: 20px;
-        color: $gray-darker;
-        font-weight: 400;
-        &.button {
-          color: #fff;
-          padding: 12px 20px;
-        }
-      }
-      button {
-        color: #fff;
-        margin-top: 0;
-      }
-    }
-  }
-
-  .button {
-    margin-top: 0;
-    font-size: 14px;
-    font-weight: 400;
-    text-align: left;
-    padding: 12px 20px;
-    color: #fff;
-  }
-  
-  .navbar-brand {
-    width: 125px;
-    padding: 10px 0;
-    margin-left: 17px;
-  }
-  .navbar-toggle {
-    background-color: $lime;
-    margin: 0;
-    border-radius: 0;
-    border: none;
-    padding: 18px 14px;
-    .icon-bar {
-      background-color: #fff;
-    }
-  }
-  .top-buttons {
-    clear: both;
-    display: flex;
-    padding: 0 10px;
-    .button {
-      width: 50%;
-      padding: 10px;
-      float: left;
-      margin: 10px;
-      padding: 10px 0;
-      text-align: center;
-      span {
-        display: block;
-      }
-      &:nth-of-type(2) {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        font-weight: 700;
-      }
-    }
-  }
-  .dropdown-menu {
-    position: relative;
-    float: none;
-    border-radius: 0;
-    border: none;
-    padding: 0;
-  }
-}
-
-
-#header-message {
-  text-align: center;
-  padding: 12px;
-  display: none;
-  p {
-    line-height: 1.4;
-    font-size: 14px;
-    margin-bottom: 0;
-  }
-}
-
-.has-message {
-  #header-message {
-    display: block;
-  }
+  font-family: $headings-font-family;
+  box-shadow: 0 0px 10px rgba(0,0,0,0.1);
+  @include transition();
 }
 
 // Media Queries
 
-@media(max-width: 1400px) {
-  #page-header {
-    &.consolidate-header {
-      #mainnav {
-        #mainnav-cta {
-          top: 65px;
-          opacity: 0;
-          visibility: hidden;
-        }
-      }
-    }
-  }
-  #mainnav {
-    #mainnav-cta {
-      position: fixed;
-      top: 96px;
-      left: 0;
-      right: auto;
-      width: 100%;
-      z-index: 99;
-      span {
-        display: inline-block;
-        margin-left: 3px;
-      }
-    }
-  }
+@media(max-width: $screen-lg-max) {
 
-  //styles for when a message exists
-  #page-header {
-    &.has-message {
-      &.consolidate-header {
-        #mainnav {
-          #mainnav-cta {
-            top: 131px;
-            opacity: 0;
-            visibility: hidden;
-          }
-        }
-      }
-      #mainnav {
-        #mainnav-cta {
-          top: 158px;
-        }
-      }
-    }
-  }
 }
 
 @media(max-width: $screen-md-max) {
-  #mainnav {
-    .navbar-nav {
-      margin-left: 60px;
-      li {
-        a {
-          padding: 0 12px;
-          font-size: 17px;
-        }
-      }
-    }
-  }
+
 }
 
 @media(max-width: $screen-sm-max) {
@@ -342,22 +27,6 @@
       padding: 0;
     }
   }
-  #mainnav {
-    .navbar-brand {
-      img {
-        width: 110px;
-      }
-    }
-    .navbar-nav {
-      li {
-        a {
-          padding: 0 10px;
-          font-size: 15px;
-        }
-      }
-    }
-  }
-  
 }
 
 @media(max-width: $screen-xs-max) {
