--- a/scss/views/_platform.scss
+++ b/scss/views/_platform.scss
@@ -8,6 +8,11 @@
     margin: 20px auto;
   }
 }
+
+#get-started {
+  padding-bottom: 0;
+}
+
 // Media Queries
 @media(max-width: $screen-md-max) {
 
