--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -1,26 +1,10 @@
 .form-control {
+  height: 48px;
   border: none;
   border-radius: 0;
   box-shadow: none;
 }
 
-// input.text {
-//   display: block;
-//   height: 45px;
-//   width: 100%;
-//   padding: 6px 20px;
-//   margin:15px 0;
-//   font-size: 14px;
-//   line-height: 1.42857;
-//   color: #000;
-//   vertical-align: middle;
-//   background-color: #fff;
-//   background-image: none;
-//   border-radius: 0;
-//   box-shadow: none;
-//   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-//   border: none;
-// }
 textarea {
   background: $gray-lighter;
   padding: 20px;
