--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 
 // Import additional elements or project specific styles
 @import "elements/navigation";
+@import "elements/tabs";
 @import "elements/illustrations";
 @import "elements/canvas";
 @import "elements/blockquotes";
