--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -121,6 +121,32 @@ img.pull-right {
   background-repeat: repeat;
 }
 
+
+//play button
+.play-button {
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  &.center {
+    justify-content: center;
+  }
+  &:hover {
+    i {
+      color: $amaranth;
+    }
+  }
+  i {
+    font-size: 40px;
+    margin-right: 10px;
+  }
+}
+
+//caret styles
+.caret {
+  border-right: 3px solid transparent;
+  border-left: 3px solid transparent;
+}
+
 // Media Queries
 @media(min-width: $screen-xl-min) {
   .container {
