background overlays and gradients

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,8 @@ $turquoise:              #3da285;
 $plum:                   #5a2747;
 $lime:                   #80bd3e;
 $cream:                  #fffdf8;
+$sea-green:              #38957c;
+$sea-green-dark:         #2f8665;
 
 
 $body-bg:                #ffffff;
