added illustration test

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -37,3 +37,12 @@ $screen-xl-min:           1400px;
 $screen-lg-min:           1200px;
 $screen-md-min:           1024px;
 $screen-sm-min:           768px;
+
+
+// Animations
+$use-fadeInUp       : true;
+$use-fadeInDown     : true;
+$use-fadeInLeft     : true;
+$use-fadeInRight    : true;
+$use-pulse          : true;
+
