--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -8,11 +8,11 @@
       margin-top: 60px;
     }
   }
-  svg {
-    width: 500px;
-    display: block;
-    margin: 0 auto;
-  }
+  // svg {
+  //   width: 500px;
+  //   display: block;
+  //   margin: 0 auto;
+  // }
 }
 
 #volunteer {
