--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -32,4 +32,12 @@ em {
 
 @media(max-width: $screen-xs-max) {
 
+  h1, .h1 { font-size: 35px; }
+  h2, .h2 { font-size: 20px; }
+  h3, .h3 { font-size: 18px; }
+  h4, .h4 { font-size: 14px; }
+
+  .lead {
+    font-size: 18px;
+  }
 }
