--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@
 @import "views/volunteer";
 
 
+// TODO - Refactor these styles into partials
 
 // for internal pages with an intro section
 .intro {
