--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -22,6 +22,10 @@
     right: 0;
     left: auto;
   }
+  &.illustration-bottom {
+    top: auto;
+    bottom: 0;
+  }
   img {
     display: block;
     max-width: 100%;
