--- a/scss/elements/_sitemap.scss
+++ b/scss/elements/_sitemap.scss
@@ -15,6 +15,7 @@
   }
 
   /* --- Root --- */
+
   ul, li {
     position: relative;
     display: inline-block;
@@ -31,8 +32,8 @@
     z-index: 0;
   }
 
-  .primary ul li a { border-top-color: #e74c3c; width: auto; }
-  .primary ul li a:before, .primary ul li .fa { color: #e74c3c; }
+  .primary ul li a { border-top-color: $brand-primary; width: auto; }
+  .primary ul li a:before, .primary ul li .fa { color: $brand-primary; }
 
   /* --- Level 1 --- */
   .primary ul ul {
@@ -69,8 +70,8 @@
     margin: 0 0 0 -30px;
   }
 
-  .primary ul ul li a { border-top-color: #3498db; width: auto; }
-  .primary ul ul li a:before, .primary ul ul li .fa { color: #3498db; }
+  .primary ul ul li a { border-top-color: $teal; width: auto; }
+  .primary ul ul li a:before, .primary ul ul li .fa { color: $teal; }
 
   /* --- Level 2 --- */
   .primary ul ul ul {
@@ -106,16 +107,16 @@
     width: 15px;
   }
 
-  .primary ul ul ul li a { border-top-color: #2ecc71; width: auto; }
-  .primary ul ul ul li a:before, .primary ul ul ul li .fa { color: #2ecc71; }
+  .primary ul ul ul li a { border-top-color: $lime; width: auto; }
+  .primary ul ul ul li a:before, .primary ul ul ul li .fa { color: $lime; }
 
   /* --- Level 3 --- */
   .primary ul ul ul ul li a { border-top-color: #e67e22; }
   .primary ul ul ul ul li a:before, .primary ul ul ul ul li .fa { color: #e67e22; }
 
   /* --- Level 4 --- */
-  .primary ul ul ul ul ul li a { border-top-color: #9b59b6; }
-  .primary ul ul ul ul ul li a:before, .primary ul ul ul ul ul li .fa { color: #9b59b6; }
+  .primary ul ul ul ul ul li a { border-top-color: $amaranth; }
+  .primary ul ul ul ul ul li a:before, .primary ul ul ul ul ul li .fa { color: $amaranth; }
 
   /* --- Secondary --- */
   .secondary {
@@ -148,7 +149,8 @@
   .primary > ul > li > a,
   .primary > ul > li > ul > li,
   .secondary li a {
-    width: 220px;
+    width: auto;
+    min-width: 220px;
   }
 
   li a,
@@ -202,7 +204,7 @@
     font-size: 10px;
     font-weight: bold;
     word-wrap: break-word;
-    color: #95a5a6;
+    color: $amaranth;
   }
 
   li a small {
