--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -22,6 +22,11 @@
     right: 0;
     left: auto;
   }
+  &.illustration-full {
+    width: 100%;
+    left: 0;
+    right: auto;
+  }
   &.illustration-bottom {
     top: auto;
     bottom: 0;
