updated links and assets

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,4 +1,4 @@
-@import "../../../../bower_components/animate-sass/animate";
+@import "../../../bower_components/animate-sass/animate";
 
 // @mixin animation($effect: fadeIn,  $duration: 0.5s, $delay: 0s) {
 //   -webkit-animation-name: $effect;
