--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -14,6 +14,9 @@
   width: 60%;
   // background-color: rgba(0,0,0,0.1);
   overflow: hidden;
+  &.logo-animation {
+    width: 50%;
+  }
   &.illustration-left {
     left: 0;
     right: auto;
