fine tune layout for volunteer sections

--- a/scss/views/_volunteer.scss
+++ b/scss/views/_volunteer.scss
@@ -17,8 +17,18 @@
 }
 
 // Media Queries
+
+
 @media(max-width: $screen-lg-max) {
 
+}
+
+@media(min-width: $screen-lg-min) {
+  .volunteer_view {
+    .intro {
+      height: 475px;
+    }
+  }
 }
 
 @media(max-width: $screen-md-max) {
