--- a/scss/elements/_consolidate-header.scss
+++ b/scss/elements/_consolidate-header.scss
@@ -4,7 +4,7 @@ body {
   &.consolidate-header {
     padding-top: 68px;
     #page-header {
-      margin-top: -30px;
+      // margin-top: -30px;
     }
     #mainnav {
       height: 68px;
