--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -10,8 +10,8 @@
   }
 }
 
-
 // Primary Navigation: Desktop
+
 #topnav {
   position: relative;
   height: 30px;
@@ -77,7 +77,8 @@
     position: absolute;
     top: 0;
     right: 0;
-
+    padding-right: 10px;
+    background-color: $amaranth;
     button {
       padding: 0 20px;
       background-color: $amaranth;
