abstract carousel as includes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 @import "elements/tabs";
 @import "elements/illustrations";
 @import "elements/canvas";
+@import "elements/carousel";
 @import "elements/blockquotes";
 @import "elements/forms";
 @import "elements/buttons";
