--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@
 @import "elements/tabs";
 @import "elements/illustrations";
 @import "elements/canvas";
-@import "elements/carousel";
+@import "elements/slider";
 @import "elements/blockquotes";
 @import "elements/forms";
 @import "elements/buttons";
