--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "base/global";
 @import "base/typography";
 @import "base/fonts";
+@import "base/alerts";
 
 
 // Import layout / global styles
