--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -12,8 +12,8 @@
   left: 0; right: auto;
   height: 100%;
   width: 60%;
-  // background-color: rgba(0,0,0,0.1);
   overflow: hidden;
+  pointer-events: none;
   &.logo-animation {
     width: 50%;
   }
@@ -59,6 +59,18 @@
   .illustration {
     position: relative;
     width: 100%;
+    &.illustration-full {
+      width: 100%;
+      left: 0;
+      right: auto;
+      top: -100px;
+      margin-bottom: -150px;
+    }
+    &.illustration-bottom {
+      position: absolute;
+      margin-bottom: 0;
+      top: 0;
+    }
   }
 }
 
