--- a/scss/elements/_slider.scss
+++ b/scss/elements/_slider.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 125px;
   margin-top: 20px;
-  overflow: hidden;
+  overflow: auto;
   .slider-row {
     display: flex;
     justify-content: center;
@@ -13,29 +13,21 @@
     top: 0;
     left: 0;
     width: auto;
-    animation: slide 10s linear infinite;
+    transform: translate3d(0, 0, 0);
+    &.animate {
+      animation: slide 30s linear infinite;
+    }
     img {
       display: inline-block;
-      margin: 0 10px;
+      margin: 0;
+      margin-right: 10px;
     }
   }
 }
 
+
 @keyframes slide {
-  0% { 
-    transform: translateX(0);
-    opacity: 0;
-  }
-  1% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  99% { 
-    transform: translateX(-100%);
-    opacity: 1;
-  }
   100% { 
-    transform: translateX(-100%); 
-    opacity: 0;
+    transform: translateX(-50%);  
   }
 }
