fix for venobox links

--- a/scss/libs/venobox.scss
+++ b/scss/libs/venobox.scss
@@ -1,3 +1,6 @@
+a.venobox {
+    display: inline-block;
+}
 /* ------ venobox.css --------*/
 .vbox-overlay *, .vbox-overlay *:before, .vbox-overlay *:after{
     -webkit-backface-visibility: hidden;
