--- a/scss/elements/_grid.scss
+++ b/scss/elements/_grid.scss
@@ -1,5 +1,6 @@
 .grid {
   display: flex;
+
   &.between {
     justify-content: space-between;
   }
@@ -18,6 +19,16 @@
   .col-* {
     float: none;
   }
+
+  &.team {
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    > div {
+      width: 50%;
+      margin: 0 auto;
+    }
+  }
 }
 
 // Media Queries
@@ -26,7 +37,13 @@
 }
 
 @media(max-width: $screen-sm-max) {
-
+  .grid {
+    &.team {
+      > div {
+        width: 100%;
+      }
+    }
+  }
 }
 
 @media(max-width: $screen-xs-max) {
