--- a/scss/views/_about.scss
+++ b/scss/views/_about.scss
@@ -18,6 +18,11 @@
   p {
     margin-bottom: 20px;
   }
+  .member-name {}
+  .member-title {}
+  .member-bio { padding: 0 20px; margin-bottom: 10px; }
+  .member-image {}
+  .member-email {}
 }
 
 #awards {
