fix for icon layout and push pull

--- a/scss/elements/_grid.scss
+++ b/scss/elements/_grid.scss
@@ -49,5 +49,11 @@
 @media(max-width: $screen-xs-max) {
   .grid {
     display: block;
+    &.icons-grid {
+      display: flex;
+      .item {
+        width: 15%;
+      }
+    }
   }
 }
