--- a/scss/layout/_page_footer.scss
+++ b/scss/layout/_page_footer.scss
@@ -77,5 +77,13 @@
 }
 
 @media(max-width: $screen-xs-max) {
-
+  #page-footer {
+    #footernav {
+      ul {
+        li {
+          display: inline-block;
+        }
+      }
+    }
+  }
 }
