--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -86,6 +86,18 @@
     }
     ul {
       display: inline-block;
+      li.dropdown {
+        &.open {
+          ul.dropdown-menu {
+            display: block;
+            left: auto;
+            right: -8px;
+          }
+        }
+        ul.dropdown-menu {
+          display: none;
+        }
+      }
     }
     .dropdown {
       .button {
