updated build for deployment

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -68,7 +68,7 @@
       background-color: $plum;
     }
     button {
-      background-color: $cream;
+      background-color: $gray-lighter;
       color: $plum;
     }
   }
