--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -72,11 +72,11 @@
       top: -100px;
       margin-bottom: -150px;
     }
-    &.illustration-bottom {
-      position: absolute;
-      margin-bottom: 0;
-      top: 0;
-    }
+    // &.illustration-bottom {
+    //   position: absolute;
+    //   margin-bottom: 0;
+    //   top: 0;
+    // }
   }
 }
 
